Privacy policy and whitespace bug fix

--- a/client/smart-waterloo-web/src/styles/styles.css
+++ b/client/smart-waterloo-web/src/styles/styles.css
@@ -28,14 +28,16 @@ h1, h2, h3, h4, h5, h6{
 	text-align: center;
 	margin: 0;
 }
-p{margin:0}
 h1{font-size:4rem;}
 h2{font-size:3.5rem;}
 h3{font-size:3rem;}
 h4{font-size:2rem;}
 h5{font-size:1.75rem;}
 h6{font-size:1.5rem;}
-p{font-size: 1rem;}
+p{
+	font-size: 1rem;
+	margin:0;
+}
 .h1 {width: 4rem;height: 4rem;}
 .h2 {width: 3.5rem;height: 3.5rem;}
 .h3 {width: 3rem;height: 3rem;}
